--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -500,7 +500,7 @@
   position: relative;
 }
 .section-8 .container .inner-image{
-  background-image: url(/Truong-Ba-Dai-Project-1/assets/images/background3.jpg);
+  background-image: url(../images/background3.jpg);
   width: 100%;
   height: 600px;
   background-size: cover;
@@ -575,7 +575,7 @@
   align-items: center;
 }
 .section-9 .container .inner-card .card-1 .inner-image{
-  background-image: url(/Truong-Ba-Dai-Project-1/assets/images/team1.jpg);
+  background-image: url(../images/team1.jpg);
   width: 75px;
   height: 75px;
   background-position: center;
@@ -596,7 +596,7 @@
   margin-bottom: 10px;
 }
 .section-9 .container .inner-card .card-2 .inner-image{
-  background-image: url(/Truong-Ba-Dai-Project-1/assets/images/team2.jpg);
+  background-image: url(../images/team2.jpg);
   width: 75px;
   height: 75px;
   background-position: center;
@@ -605,7 +605,7 @@
   margin-right: 20px;
 }
 .section-9 .container .inner-card .card-3 .inner-image{
-  background-image: url(/Truong-Ba-Dai-Project-1/assets/images/team3.jpg);
+  background-image: url(../images/team3.jpg);
   width: 75px;
   height: 75px;
   background-position: center;
@@ -634,7 +634,7 @@
   display:flex;
 }
 .section-10 .container .inner-video .video{
-  background-image: url(/Truong-Ba-Dai-Project-1/assets/images/background4.jpg);
+  background-image: url(../images/background4.jpg);
   background-position: center;
   background-size: cover;
   width: 100%;
